<resources>
    <string name="app_name">Calculator Annex</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculator_fragment">Calculator Fragment</string>
    <string name="divide">÷</string>
    <string name="percent">%</string>
    <string name="brackets">( )</string>
    <string name="ac">AC</string>
    <string name="multiply">×</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="minus">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="plus">+</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="back">B</string>
</resources>