<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".presentation.calculator.CalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_rounded_top"
        android:paddingHorizontal="24dp"
        android:paddingVertical="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineMain">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonBack"
            style="@style/CalculatorButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonZero"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEqual"
            style="@style/CalculatorButtonTertiary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/equal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonDot"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDot"
            style="@style/CalculatorButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonEqual"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonZero"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonZero"
            style="@style/CalculatorButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonDot"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonBack"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonOne"
            style="@style/CalculatorButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/one"
            app:layout_constraintBottom_toBottomOf="@id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/buttonTwo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonTwo"
            style="@style/CalculatorButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/two"
            app:layout_constraintBottom_toBottomOf="@id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/buttonThree"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonOne"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonThree"
            style="@style/CalculatorButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/three"
            app:layout_constraintBottom_toBottomOf="@id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonTwo"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonPlus"
            style="@style/CalculatorButtonTertiary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/plus"
            app:layout_constraintBottom_toBottomOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonThree"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFour"
            style="@style/CalculatorButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/four"
            app:layout_constraintBottom_toBottomOf="@id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/buttonFive"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFive"
            style="@style/CalculatorButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/five"
            app:layout_constraintBottom_toBottomOf="@id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/buttonSix"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonFour"
            app:layout_constraintTop_toTopOf="@+id/guideline1"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSix"
            style="@style/CalculatorButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/six"
            app:layout_constraintBottom_toBottomOf="@id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonFive"
            app:layout_constraintTop_toTopOf="@+id/guideline1"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonMinus"
            style="@style/CalculatorButtonTertiary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/minus"
            app:layout_constraintBottom_toBottomOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonSix"
            app:layout_constraintTop_toTopOf="@+id/guideline1"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSeven"
            style="@style/CalculatorButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/seven"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintEnd_toStartOf="@+id/buttonEight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEight"
            style="@style/CalculatorButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/eight"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintEnd_toStartOf="@+id/buttonNine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonSeven"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNine"
            style="@style/CalculatorButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/nine"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonEight"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonMultiply"
            style="@style/CalculatorButtonTertiary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/multiply"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonNine"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAC"
            style="@style/CalculatorButtonSecondary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/ac"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/buttonBrackets"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonBrackets"
            style="@style/CalculatorButtonSecondary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/brackets"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/buttonPercent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonAC"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonPercent"
            style="@style/CalculatorButtonSecondary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/percent"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonBrackets"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDivide"
            style="@style/CalculatorButtonTertiary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/divide"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonPercent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.80" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expressionResultConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonsConstraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextExpression"
            style="@style/AnnexEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="36dp"
            android:fontFamily="@font/montserrat_regular"
            android:importantForAutofill="no"
            android:labelFor="@id/editTextResult"
            android:textSize="38sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="308 x 42" />

        <EditText
            android:id="@+id/editTextResult"
            style="@style/AnnexEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="24dp"
            android:autofillHints="no"
            android:fontFamily="@font/montserrat_semibold"
            android:labelFor="@id/editTextExpression"
            android:textSize="80sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="12,936" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

</androidx.constraintlayout.widget.ConstraintLayout>